VIS-60 fix tabs overflow

--- a/src/assets/styles/analyticalView.scss
+++ b/src/assets/styles/analyticalView.scss
@@ -6,8 +6,7 @@
     padding: 10px;
     
     .recommendations-list {
-      min-width: 200px;
-    
+      
       h4 {
         padding-right: 10px;
       }
@@ -19,6 +18,7 @@
         padding: 10px;
         border: 1px solid $bs-gray2;
         transition: .15s;
+        min-width: 265px;
     
         &:hover{
           background-color: rgb(250, 250, 250);
