--- a/src/assets/styles/case.scss
+++ b/src/assets/styles/case.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow: hidden;
 }
 
 .case-small-text{
@@ -52,12 +53,17 @@
 
 .tabs-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   flex-grow: 1;
 
+  .tabs-header{
+    display: flex;
+    flex-direction: row;
+  }
   input[type="radio"] {
     display: none;
   }
+
 
   .tab-label {
     height: 40px;
@@ -74,10 +80,6 @@
   }
 
   .tab {
-    display: none;
-  }
-
-  input[type='radio']:checked + .tab-label + .tab {
     margin: -1px 0 0 0;
     width: 100%;
     height: 100%;
@@ -92,7 +94,7 @@
     border-bottom: none;
   }
 
-  .details-tab{
+  .tab-details{
     padding: 20px;
 
     .recommendation-details{
