--- a/src/assets/styles/diagram.scss
+++ b/src/assets/styles/diagram.scss
@@ -3,7 +3,6 @@
 
 .diagram {
     display: flex;
-    flex-direction: column;
     flex-grow: 1;
     
     .vue-bpmn-diagram-container { 
