--- a/src/assets/styles/operationalView.scss
+++ b/src/assets/styles/operationalView.scss
@@ -37,7 +37,6 @@
     }
   }
   .recommendations-list {
-      min-width: 200px;
     
       h4 {
         padding-right: 10px;
